# MLME

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  Mermaid 图表渲染.md  README.md  WORKLOG.md  docs.7z  index.html  package.json  pnpm-lock.yaml  projecttask.md  src.7z  vite.config.ts  工作流.md  跨项目开发准则 v1.0.md
.github/workflows/: ci.yml  release.yml
Principle/: Principle.md
docs/: PRD.md  architecture.md  dev-reflection-font-fix.md  local_stability_regression_result.md  markdown_spec.md  progress.md  reality_report.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: asset_commands.rs  file_commands.rs  mod.rs
src/app/: document_state.ts  use_window_close_guard.tsx
src/services/: asset_service.ts  export_service.ts  file_reader.ts  file_service.ts  logger.ts  path_service.ts  print_service.ts  recent_files_service.ts  recent_workspaces_service.ts  settings_service.ts
src/styles/: app.css  components.css  editor.css  layout.css  preview.css  variables.css
src/types/: markdown-it-katex.d.ts
tests/markdown/: edit_commands.test.ts  find_replace.test.ts  markdown_cases_structure.test.ts  render_markdown.test.ts  serialization_roundtrip.test.ts  word_count.test.ts
tests/markdown_cases/: basic.md  code.md  edit_commands.md  image_drop.md  image_roundtrip.md  list.md  math.html  math.md  mermaid.html  mermaid.md  outline.md  preview.md  print_pdf.md  table.md  test.md  未命名文档.assets.7z  未命名文档.md
(+27 files in other folders)
